syntax = "proto3";

package book;

option go_package = "github.com/storyofhis/book-service/protos";

import "google/api/annotations.proto";

service BookService {
    rpc CreateBook (CreateBookRequest) returns (BookResponse) {
        option (google.api.http) = {
            post: "/v1/books"
            body: "*"
        };
    }
    rpc GetBooks (GetBooksRequest) returns (GetBooksResponse) {
        option (google.api.http) = {
            get: "/v1/books"
        };
    }
    rpc GetBookByID (GetBookByIDRequest) returns (BookResponse) {
        option (google.api.http) = {
            get: "/v1/books/{id}"
        };
    }
    rpc UpdateBook (UpdateBookRequest) returns (BookResponse) {
        option (google.api.http) = {
            put: "/v1/books/{id}"
            body: "*"
        };
    }
    rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse) {
        option (google.api.http) = {
            delete: "/v1/books/{id}"
        };
    }
}

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string description = 3;
}

message GetBooksRequest {}

message GetBooksResponse {
    repeated Book books = 1;
}

message GetBookByIDRequest {
    string id = 1;
}

message UpdateBookRequest {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
}

message DeleteBookRequest {
    string id = 1;
}

message BookResponse {
    Book book = 1;
}

message DeleteBookResponse {
    string message = 1;
}